--- a/Tracking Table/vitrine/static/vitrine/css/holes_dots.css
+++ b/Tracking Table/vitrine/static/vitrine/css/holes_dots.css
@@ -1,8 +1,3 @@
-.frame-row {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-}
 
 .holes-svg {
     display: inline-block;
